--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
                                             <br>
                                             <t class="team_post"> Head of Research & Development</t>
                                             <p class="team_about" style="text-align: justify;">
-                                                I'm Abhishek Srivastava, Creative & Tech Enthusiast, Skilled in frontend
+                                                I'm Abhishek Srivastava, Creative & Tech Enthusiast, skilled in frontend
                                                 and Backend Technology.
                                                 Master in Java.
                                                 Currently chasing my dreams to be the best.
@@ -160,14 +160,14 @@
                                             <img class="team_DP"
                                                 style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
                                                 src="img/PP 3/vivek.jpg">
-                                            <t class="team_name">Vivek kashyap</t>
+                                            <t class="team_name">Vivek Kashyap</t>
                                             <br>
                                             <t class="team_post"> Head of Design</t>
                                             <p class="team_about" style="text-align: justify;">
                                                 I'm Vivek Kashyap,Graphic designer whose work emphasizes creativity and
-                                                innovation,management skills.
+                                                innovation, management skills.
                                                 Skilled in the Field with a mastery of Adobe Creative Suite,
-                                                particularly Photoshop, and Illustrator.Currently looking for
+                                                particularly Photoshop, and Illustrator. Currently looking for
                                                 internship.
                                             </p>
                                             <div class="team_social">
@@ -287,7 +287,7 @@
                                             <br>
                                             <t class="team_post">Head of Marketing Team</t>
                                             <p class="team_about" style="text-align: justify;">
-                                                Interested in Growing the network and flexibility of the Cell using my
+                                                Interested in Growing the network and flexibility of the cell using my
                                                 skills of research and management and shall develop the maximum outreach
                                                 of every event of the cell.
                                             </p>
@@ -316,10 +316,10 @@
                                                 src="img/PP 3/IMG_20220912_194236 - KAPIL SONI.jpg">
                                             <t class="team_name">Kapil Soni</t>
                                             <br>
-                                            <t class="team_post">Advisory Board Member of Event Mangement Team</t>
+                                            <t class="team_post">Advisory Board Member of Event Management Team</t>
                                             <p class="team_about" style="text-align: justify;">
                                                 Executive Member of Event Management Team at IIC BIET Jhansi,
-                                                coordinated the management and smooth execution of innovanza 3.0 having
+                                                coordinated the management and smooth execution of Innovanza 3.0 having
                                                 knowledge of Autocad(building designing).
                                             </p>
                                             <div class="team_social">
@@ -389,11 +389,11 @@
                                             <br>
                                             <t class="team_post">Advisory Board Member of Finance Team</t>
                                             <p class="team_about" style="text-align: justify;">
-                                                Myself Manish Shukla .I am currently pursuing b.tech from bundelkhand
-                                                institute of technology and technology jhansi in civil engineering
+                                                Myself Manish Shukla .I am currently pursuing b.tech from Bundelkhand
+                                                Institute Of Engineering and Technology, Jhansi in Civil Engineering
                                                 branch and
-                                                work as a finance advisory board members in Innovation and incubation
-                                                centre.
+                                                work as a finance advisory board members in Innovation and Incubation
+                                                Centre.
                                             </p>
                                             <div class="team_social">
                                                 <button
@@ -427,8 +427,8 @@
                                             <p class="team_about" style="text-align: justify;">
                                                 Executive member of content writing team at IIC BIET Jhansi, interested
                                                 in increasing the reach of cell.
-                                                Inclined towards research and recent innovation. conducted Innovenza 3.0
-                                                smoothly
+                                                Inclined towards research and recent innovation. conducted Innovanza 3.0
+                                                smoothly.
                                             </p>
                                             <div class="team_social">
                                                 <button
@@ -538,7 +538,7 @@
                                     <t class="team_post">Excecutive Member of Public & Corporate Relation Team</t>
                                     <p class="team_about" style="text-align: justify;">
                                         I am Akshat Singh. A Web developer and a programmer, currently working on my
-                                        coding skills
+                                        coding skills.
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='' " class="team_btn"><i
@@ -633,7 +633,7 @@
                                     <t class="team_post">Deputy Head of Logistics Team</t>
                                     <p class="team_about" style="text-align: justify;">
                                         I am Sahil Kumar,a rookie in fields of Photography and Graphic Designing.
-                                        Currently working as a coordinator in IIC, BIET Jhansi
+                                        Currently working as a coordinator in IIC, BIET Jhansi.
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='' " class="team_btn"><i
@@ -697,7 +697,7 @@
                                     <br>
                                     <t class="team_post">Excecutive Member of Content & Records Team</t>
                                     <p class="team_about" style="text-align: justify;">
-                                        Myself Shubhangi Tiwari.....a designing and content writing enthusiast .
+                                        Myself Shubhangi Tiwari...a designing and content writing enthusiast .
                                         Currently learning video editing.
                                     </p>
                                     <div class="team_social">
@@ -761,7 +761,7 @@
                                     <t class="team_post">Excecutive Member of Research & Development Team</t>
                                     <p class="team_about" style="text-align: justify;">
                                         I'm saurabh dubey.
-                                        I have good grip over python and c and c++ programing languages .I have recently
+                                        I have good grip over python and c and c++ programing languages. I have recently
                                         started learning machine learning.
                                     </p>
                                     <div class="team_social">
@@ -925,7 +925,7 @@
                                     <t class="team_post">Deputy Head of Finance Team</t>
                                     <p class="team_about" style="text-align: justify;">
                                         I am Ujjwal Sahu, a rookie web developer, a poet and a writer. Currently work as
-                                        a Deputy Head of Finance in a Innovation and Incubation cell
+                                        a Deputy Head of Finance in a Innovation and Incubation cell.
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='' " class="team_btn"><i
@@ -991,7 +991,7 @@
                                     <t class="team_post">Deputy Head Of Marketing</t>
                                     <p class="team_about" style="text-align: justify;">
                                         I'm Vashu Pandey, Video Editor and Graphic Designer. Recently did a Video
-                                        Editing Internship .
+                                        Editing Internship.
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='' " class="team_btn"><i
@@ -1212,7 +1212,7 @@
                                     <br>
                                     <t class="team_post">Excecutive Member of Entrepreneurship Team</t>
                                     <p class="team_about" style="text-align: justify;">
-                                        Student of Btech 3rd year branch EE at BIET Jhansi. Working as executive memberof Biicf .
+                                        Student of Btech 3rd year branch EE at BIET Jhansi. Working as executive memberof BIICF.
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='' " class="team_btn"><i
@@ -1302,7 +1302,7 @@
                                     <br>
                                     <t class="team_post">Excecutive Member of Finance Team</t>
                                     <p class="team_about" style="text-align: justify;">
-                                        I am a 3rd year IT Student
+                                        I am a 3rd year IT student.
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='https://www.linkedin.com/in/aditya-patel-183b16223' " class="team_btn"><i
@@ -1333,7 +1333,7 @@
                                     <br>
                                     <t class="team_post">Excecutive Member of Finance Team</t>
                                     <p class="team_about" style="text-align: justify;">
-                                        I am a 3rd year IT Student
+                                        I am a 3rd year IT student.
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='https://www.linkedin.com/in/divya-madd63' " class="team_btn"><i
@@ -1378,7 +1378,7 @@
                                 <br>
                                 <t class="team_post">Coordinator</t>
                                 <p class="team_about" style="text-align: justify;">
-                                    I'm Prajjwal Jaiswal—a tech enthusiast with a passion for creative coding. Exploring Web developmnt and content writing skills. I thrive on challenges, pushing boundaries to acquire new skills and explore uncharted horizons.
+                                    I'm Prajjwal Jaiswal, a tech enthusiast with a passion for creative coding. Exploring Web developmnt and content writing skills. I thrive on challenges, pushing boundaries to acquire new skills and explore uncharted horizons.
                                 </p>
                                 <div class="team_social">
                                     <button onclick="location.href='http://www.linkedin.com/in/prajjwal-jaiswal-452381224' " class="team_btn"><i
@@ -1634,9 +1634,7 @@ I am from Gorakhpur and currently I'm pursuing B. Tech. degree in  Electrical En
                                     <t class="team_post">Coordinator</t>
                                     <p class="team_about" style="text-align: justify;">
                                         Accomplished public speaker with a knack for engaging audiences.
-                                        Fluent in Writting and Reading 
-
-                                          Enthusiastic video editor and content creator,Content Writer,Management .
+                                        Fluent in Writting and Reading. Enthusiastic video editor and content creator, content writer .
 
 
                                     </p>
@@ -1670,7 +1668,7 @@ I am from Gorakhpur and currently I'm pursuing B. Tech. degree in  Electrical En
                                     <br>
                                     <t class="team_post">Coordinator</t>
                                     <p class="team_about" style="text-align: justify;">
-                                        "I'm a Computer Science student at BIET Jhansi who deeply passionate about exploring the latest tech trends. I co-founded  a project, learning about online marketing and SEO along the way.Excited to use tech for meaningful change!"
+                                        I'm a Computer Science student at BIET Jhansi who deeply passionate about exploring the latest tech trends. I co-founded  a project, learning about online marketing and SEO along the way. Excited to use tech for meaningful change!
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='http://www.linkedin.com/in/m11kp' " class="team_btn"><i
@@ -1701,7 +1699,7 @@ I am from Gorakhpur and currently I'm pursuing B. Tech. degree in  Electrical En
                                     <br>
                                     <t class="team_post">Coordinator</t>
                                     <p class="team_about" style="text-align: justify;">
-                                        I am a 2nd year BTech student , studying in Bundelkhand institute of engineering and technology, Jhansi .
+                                        I am a 2nd year BTech student , studying in Bundelkhand Institute of Engineering and Technology, Jhansi .
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='https://www.linkedin.com/in/harshada-raj-1161122a7?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app' " class="team_btn"><i
@@ -1732,7 +1730,7 @@ I am from Gorakhpur and currently I'm pursuing B. Tech. degree in  Electrical En
                                     <br>
                                     <t class="team_post">Coordinator</t>
                                     <p class="team_about" style="text-align: justify;">
-                                        I am second year student currently  pursuing B.tech from BIET Jhansi.I am a keen learner and enthusiast in learning MS Office.I am intrested to explore more in electronics branch.
+                                        I am second year student currently  pursuing B.tech from BIET Jhansi. I am a keen learner and enthusiast in learning MS Office.I am intrested to explore more in electronics branch.
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='https://www.linkedin.com/in/ishan-visen-453116249/' " class="team_btn"><i
@@ -1763,7 +1761,7 @@ I am from Gorakhpur and currently I'm pursuing B. Tech. degree in  Electrical En
                                     <br>
                                     <t class="team_post">Coordinator</t>
                                     <p class="team_about" style="text-align: justify;">
-                                        "I am Second year student of Electrical engineering and intrested in designing"
+                                        I am Second year student of Electrical engineering and intrested in designing.
                                     </p>
                                     <div class="team_social">
                                         <button onclick="location.href='https://www.linkedin.com/in/sneha-kumari-3bba18257?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app' " class="team_btn"><i
@@ -2201,7 +2199,7 @@ I am from Gorakhpur and currently I'm pursuing B. Tech. degree in  Electrical En
     <div class="teams_desc" style="text-align: center;">
         <h1 class=" teams_name" style="font-size: 60px;font-weight: bolder; margin-top: 120px;"><span
                 style="color: rgb(255,122,0);">HALL </span>OF FAME</h1>
-        <p class="mb-5" style="color: white;">Our Mentors who were with us and guided us, we will never forget thier
+        <p class="mb-5" style="color: white;">Our Mentors who were with us and guided us, we will never forget their
             contribution.</p>
     </div>
     <div class="container hall" style="margin-top:80px">
