--- a/entrepreneurship/index.html
+++ b/entrepreneurship/index.html
@@ -100,7 +100,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                   <a href="../index.html" class="nav-item nav-link ">Home</a>
-                  <a href="https://innovanza.tech/" class="nav-item nav-link ">Innovanza'24</a>
+                  <a href="https://innovanza.iicbietjhs.in/" class="nav-item nav-link ">Innovanza'24</a>
                   <a href="../other-events/index.html" class="nav-item nav-link ">Events</a>
                   <a href="../certification.html" class="nav-item nav-link ">Certificate Verification</a>
                   <a href="../entrepreneurship/index.html" class="nav-item nav-link">BIICF</a>
