--- a/about.html
+++ b/about.html
@@ -692,7 +692,7 @@
                                 <div class="team_desc" style="height:340px">
                                     <img class="team_DP"
                                         style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                                        src="img\PF 2\Shubhangi.jpg">
+                                        src="img/team/team_members/shubhangimyl.jpg">
                                     <t class="team_name">Shubhangi Tiwari </t>
                                     <br>
                                     <t class="team_post">Excecutive Member of Content & Records Team</t>
