--- a/index.html
+++ b/index.html
@@ -123,7 +123,23 @@
         </div>
     </div>
     <!-- Carousel End -->
-
+    <!-- Notices and Alerts start -->
+         <div class="news-and-events">
+            <h2>News and Announcement</h2>
+            <ul id="eventsList">
+                <li><a href="https://forms.gle/P7wabyGAprkJfwkb9">Free internship opportunity at Incubation Center,  BIET Jhansi ( BIICF) for all B.Tech, MBA students. Kindly reach out to veneu for further details. Registrations are opened.</a></li>
+                <li><a href="link2-url">Event 2</a></li>
+                <li><a href="link3-url">Event 3</a></li>
+                <!-- <li><a href="link4-url">Event 4</a></li> -->
+                <!-- <li><a href="link5-url">Event 5</a></li>
+                <li><a href="link6-url">Event 6</a></li>
+                <li><a href="link7-url">Event 7</a></li>
+                <li><a href="link8-url">Event 8</a></li>
+                <li><a href="link9-url">Event 9</a></li>
+                <li><a href="link10-url">Event 10</a></li> -->
+            </ul>
+        </div>               
+         <!-- Notices and alerts end -->
     <!-- About Start -->
     <div class="container-xxl py-5">
         <div class="container">
