--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
             <h2>News and Announcement</h2>
             <ul id="eventsList">
                 <li><a href="https://forms.gle/P7wabyGAprkJfwkb9">Free internship opportunity at Incubation Center,  BIET Jhansi ( BIICF) for all B.Tech, MBA students. Kindly reach out to veneu for further details. Registrations are opened.</a></li>
-                <li><a href="link2-url">Event 2</a></li>
-                <li><a href="link3-url">Event 3</a></li>
+                <li><a href="https://www.innovanza.iicbietjhs.in/">Bundelkhand biggest techfest</a></li>
+                <li><a href="">DJ Night at biet jhansi on 13th April 2024</a></li>
                 <!-- <li><a href="link4-url">Event 4</a></li> -->
                 <!-- <li><a href="link5-url">Event 5</a></li>
                 <li><a href="link6-url">Event 6</a></li>
