--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
          <div class="news-and-events">
             <h2>News and Announcement</h2>
             <ul id="eventsList">
+                <li><a href="https://drive.google.com/file/d/1vYGhEIDbtB-vJgq7o0Pwr6GqusODXF8T/view?usp=sharing">Summer Internship at IIC</a></li>
                 <li><a href="https://forms.gle/P7wabyGAprkJfwkb9">Free internship opportunity at Incubation Center,  BIET Jhansi ( BIICF) for all B.Tech, MBA students. Kindly reach out to veneu for further details. Registrations are opened.</a></li>
                 <li><a href="https://www.innovanza.iicbietjhs.in/">Bundelkhand biggest techfest</a></li>
                 <li><a href="">DJ Night at biet jhansi on 13th April 2024</a></li>
