--- a/index.html
+++ b/index.html
@@ -426,110 +426,62 @@
         <div class="container">
             <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="h-100">
-                    <h1 class="display-12 mb-5" style="width: 100%;text-align:center">Our Support</h1>
-                    <div>
-                        <div class="container">
-                            <div class="row">
-                                <!-- <div class="col-lg-12">
-                                </div> -->
-                                <div class="col-lg-12">
-
-                                    <div class="row" style="justify-content: center;">
-                                        <div class="col-lg-3"></div>
-
-                                            <div class="meeting-item">
-
-                                                <div class="thumb">
-                                                    <a href="#"><img src="img\home/support_logo\upstart_logo.png" height="200px"
-                                                            style="margin-top : -30px; padding:40px;"
-                                                            alt="New Lecturer Meeting"></a>
-                                                </div>
-
-                                            </div>
-
-                                        </div>
-                                        <div class="col-lg-3"></div>
-
-                                        <div class="meeting-item">
-
-                                            <div class="thumb">
-                                                <a href="#"><img src="img\home/support_logo\BIICF.png" height="200px"
-                                                        style="margin-top : -30px; padding:40px;"
-                                                        alt="New Lecturer Meeting"></a>
-                                            </div>
-
-                                        </div>
-
+                    <h1 class="display-12 mb-5" style="text-align: center;">Our Support</h1>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-3 col-md-4 col-sm-6 my-3 text-center">
+                                <div class="meeting-item">
+                                    <div class="thumb">
+                                        <a href="#"><img src="img/home/support_logo/upstart_logo.png" class="img-fluid"
+                                                style="height: 150px; padding: 10px;" alt="UpStart Logo"></a>
                                     </div>
-                                    <div class="col-lg-3"></div>
-
-                                            <div class="meeting-item">
-
-                                                <div class="thumb">
-                                                    <a href="#"><img src="img\home/support_logo\InnovationHub.png" height="200px"
-                                                            style="margin-top : -30px; padding:40px;"
-                                                            alt="New Lecturer Meeting"></a>
-                                                </div>
-
-                                            </div>
-
-                                        </div>
-                                        <div class="col-lg-3">
-
-                                            <div class="meeting-item">
-
-                                                <div class="thumb">
-
-                                                    <a href="#"><img src="img\home/support_logo\AICTE.png" height="200px"
-                                                            style="margin-top : -30px; padding:30px;"
-                                                            alt="New Lecturer Meeting"></a>
-
-                                                </div>
-
-                                            </div>
-
-                                        </div>
-
-                                        <div class="col-lg-3">
-
-                                            <div class="meeting-item">
-
-                                                <div class="thumb">
-                                                    <a href="#"><img src="img\home/support_logo\azadi.png" height="200px"
-                                                            style="margin-top : -30px; padding:40px;"
-                                                            alt="New Lecturer Meeting"></a>
-                                                </div>
-
-                                            </div>
-
-                                        </div>
-
-                                        <div class="col-lg-3">
-
-                                            <div class="meeting-item">
-
-                                                <div class="thumb">
-
-                                                    <a href="#"><img src="img\home/support_logo\biet.png" height="200px"
-                                                            style="margin-top : -30px; padding:40px;"
-                                                            alt="New Lecturer Meeting"></a>
-                                                </div>
-
-                                            </div>
-
-                                        </div>
-
-                                        <div class="col-lg-3">
-
-                                            <div class="meeting-item">
-
-                                                <div class="thumb">
-
-                                                    <a href="#"><img src="img\home/support_logo\mhrd.png" height="200px"
-                                                            style="margin-top : -30px; padding:40px;"></a>
-                                                </div>
-                                            </div>
-                                        </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 my-3 text-center">
+                                <div class="meeting-item">
+                                    <div class="thumb">
+                                        <a href="#"><img src="img/home/support_logo/BIICF.png" class="img-fluid"
+                                                style="height: 150px; padding: 10px;" alt="BIICF Logo"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 my-3 text-center">
+                                <div class="meeting-item">
+                                    <div class="thumb">
+                                        <a href="#"><img src="img/home/support_logo/InnovationHub.png" class="img-fluid"
+                                                style="height: 150px; padding: 10px;" alt="Innovation Hub Logo"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 my-3 text-center">
+                                <div class="meeting-item">
+                                    <div class="thumb">
+                                        <a href="#"><img src="img/home/support_logo/AICTE.png" class="img-fluid"
+                                                style="height: 150px; padding: 10px;" alt="AICTE Logo"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 my-3 text-center">
+                                <div class="meeting-item">
+                                    <div class="thumb">
+                                        <a href="#"><img src="img/home/support_logo/azadi.png" class="img-fluid"
+                                                style="height: 150px; padding: 10px;" alt="Azadi Ka Amrit Mahotsav Logo"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 my-3 text-center">
+                                <div class="meeting-item">
+                                    <div class="thumb">
+                                        <a href="#"><img src="img/home/support_logo/biet.png" class="img-fluid"
+                                                style="height: 150px; padding: 10px;" alt="BIET Logo"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 my-3 text-center">
+                                <div class="meeting-item">
+                                    <div class="thumb">
+                                        <a href="#"><img src="img/home/support_logo/mhrd.png" class="img-fluid"
+                                                style="height: 150px; padding: 10px;" alt="MHRD Logo"></a>
                                     </div>
                                 </div>
                             </div>
@@ -538,7 +490,9 @@
                 </div>
             </div>
         </div>
-    </div>   
+    </div>
+    
+    
 
             <!-- Contact Start -->
             <div class="container-xxl py-5" >
