--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <head-links></head-links>
 
-    <title>IIC | HHHHHHome</title>
+    <title>IIC | Home</title>
     
     <style>
         .glass-morphism{
