--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
             </div>
              <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <img src="img/home/AKD.png"
+                    <img src="img/home/AtulSir.png"
                         style=" margin-top:-20px;margin-right: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0); ;">
                 </div>
                 <div class="col-lg-6 wow " data-wow-delay="0.1s">
