--- a/index.html
+++ b/index.html
@@ -428,9 +428,12 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
                         <div class="h-100" style="padding-top:10px;">
                             <h5 class="display-6" style="text-align: right;">Prof. Dr. Atul Kumar Dwivedi</h5>
                             <h2 style="color: rgb(0, 0, 0);text-align: right;">Vice Pressident</h2>
-                            <p class="text-hover" style="text-align:justify">  Prof. Dr. Atul Kumar Dwivedi is a distinguished academician and accomplished researcher with over 12 years of experience in teaching, mentoring, and institutional leadership. He is currently serving at BIET Jhansi, where he holds multiple key roles including Faculty, Deputy Training & Placement Officer, Faculty Incharge of the IoT Experience Centre, and Vice President of the Innovation & Incubation Centre.
-The Best Teacher Awardee, he is widely recognized for his expertise in Electrical and Electronic Systems, Signal Processing,  Artificial Intelligence Solutions, he  also holds a Doctorate in Signal Processing and a post-graduate degree in VLSI Design. His academic and research work focuses on integrating AI and IoT with Digital Signal Processing, Biomedical Applications, and Integrated Circuits.
-Prof. Dr. Atul Kumar Dwivedi has made valuable contributions to government-sponsored projects such as Anuvad—a national initiative for translating technical textbooks into Hindi—and a project focusing on Depression Analysis using AI and signal processing. He has published numerous papers in prestigious international journals and regularly delivers workshops and technical training sessions.
+                            <p class="text-hover" style="text-align:justify"> Prof. Dr. Atul Kumar Dwivedi is a seasoned academician and researcher with over 12 years of experience in teaching, mentoring, and institutional leadership. He is currently associated with BIET Jhansi, 
+                                serving in multiple capacities including Faculty, Deputy Training & Placement Officer, Faculty Incharge of the IoT Experience Centre,
+                                and Vice President of the Innovation & Incubation Centre. A recipient of the Best Teacher Award, he is known for his expertise in Electrical and Electronic
+                                Systems, Signal Processing, and Artificial Intelligence. He holds a Ph.D. in Signal Processing and a postgraduate degree in VLSI Design. His research interests
+                                include the integration of AI and IoT with Digital Signal Processing, Biomedical Applications, and Integrated Circuits. Dr. Dwivedi has significantly contributed to key government projects such as Anuvad—focused on translating technical textbooks into Hindi—and 
+                                an AI-driven Depression Analysis initiative. He has published numerous papers in reputed international journals and frequently conducts workshops and technical training programs.
                             </p>
 
                         </div>
