--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
           
             <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <img src="img/home/JK_Sharma.jpeg"
+                    <img src="img/home/Jk_Sharma.png"
                         style=" margin-top:-20px;margin-right: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0); ;">
                 </div>
                 <div class="col-lg-6 wow " data-wow-delay="0.1s">
@@ -457,7 +457,7 @@ Beyond his teaching and research roles, he had served as the Assistant Dean Acad
                 </div>
             
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <img src="img/home/SKR.png" 
+                    <img src="img/home/skrSir.png" 
                         style=" margin-top:-20px;margin-left: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0);">
                 </div>
             </div>
