--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
                     <div class="position-relative overflow-hidden h-100" style="min-height: 300px; text-align: center;">
                         <div class="h-100" style="padding-top:10px;">
                             <h5 class="display-6" style="text-align: right;">Prof. Dr. Atul Kumar Dwivedi</h5>
-                            <h2 style="color: rgb(0, 0, 0);text-align: right;">Vice Pressident</h2>
+                            <h2 style="color: rgb(0, 0, 0);text-align: right;">Vice President</h2>
                             <p class="text-hover" style="text-align:justify"> Prof. Dr. Atul Kumar Dwivedi is a seasoned academician and researcher with over 12 years of experience in teaching, mentoring, and institutional leadership. He is currently associated with BIET Jhansi, 
                                 serving in multiple capacities including Faculty, Deputy Training & Placement Officer, Faculty Incharge of the IoT Experience Centre,
                                 and Vice President of the Innovation & Incubation Centre. A recipient of the Best Teacher Award, he is known for his expertise in Electrical and Electronic
