--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
                 </div>
                 
             </div>
-            <div class="glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
+<!--             <div class="glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
                 <div class="col-lg-6 wow" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 300px; text-align: center;">
                         <div class="h-100" style="padding-top:10px;">
@@ -417,7 +417,7 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
                     <img src="img/home/DKS.png" 
                         style=" margin-top:-20px;margin-left: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0);">
                 </div>
-            </div>
+            </div> -->
              <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <img src="img/home/AtulSir.png"
