--- a/index.html
+++ b/index.html
@@ -395,19 +395,17 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
                 </div>
                 
             </div>
-<!--             <div class="glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
+            <div class="glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
                 <div class="col-lg-6 wow" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 300px; text-align: center;">
                         <div class="h-100" style="padding-top:10px;">
                             <h5 class="display-6" style="text-align: left;">Prof. Dinesh Kumar Shrivastav</h5>
                             <h2 style="color: rgb(0, 0, 0);text-align: left;">President</h2>
                             <p class="text-hover" style="text-align:justify">
-                                Prof. (Dr.) Shahanaz Ayub is Professor in Electronics and Communication Engineering Department. 
-                                She is also the Dean of Research and Development. Dr. Ayub is President of Institute Innovation 
-                                Council and Coordinator of Innovation and Incubation Cell. She has keen interest in Outcome 
-                                Based Education and is actively involved in NBA Accreditation of UG programs. She is also a 
-                                member of the women's grievance redressal cell. She has been selected for the prestigious National Award to Teachers – Best Teacher Award, 2024, which will be presented by the Hon'ble President of India on September 5, 2024, at Vigyan Bhawan, New Delhi.
-                                She was previously honored with the AICTE VISVESVARAYA BEST TEACHER AWARD 2021 by Hon'ble Education Minister Shri Dharmendra Pradhan ji.
+                                Prof. D. K. Srivastava is a senior faculty member in the Department of Electronics and Communication Engineering at BIET, Jhansi. He earned his B.Tech and M.Tech in Electronics Engineering from the University of Allahabad and completed his Ph.D. from Uttarakhand Technical University, Dehradun.
+                                Since joining BIET in 1999, he has been serving as a Professor since 2015. He teaches key subjects such as Digital Electronics, Digital Communication, Analog Communication, Optical Communication, Network Analysis & Synthesis, and Information Theory. 
+                                His research areas include Microwave Engineering, Microstrip Antennas, Optical Communication, and Sensor Technologies. He has published several impactful papers in reputed international journals indexed in SCI, Scopus, and others, including Wireless Personal Communications, Applied Physics A, and Photonic Sensors. 
+                                Prof. Srivastava also holds major responsibilities such as Dean (Planning), President of the Institute Innovation Council, Convenor of the Innovation and Incubation Centre, Director of BIICF, Coordinator of the Swami Vivekananda Digishakti Yojna, Organizing Chair of Hackathon, and PG Coordinator of the ECE Department.
                             </p>
                         </div>
                     </div>
@@ -417,7 +415,7 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
                     <img src="img/home/DKS.png" 
                         style=" margin-top:-20px;margin-left: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0);">
                 </div>
-            </div> -->
+            </div>
              <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <img src="img/home/AtulSir.png"
