--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
                 </div>
             
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <img src="img/home/DKS.png" 
+                    <img src="img/home/Dks.jpeg" 
                         style=" margin-top:-20px;margin-left: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0);">
                 </div>
             </div>
