--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
                     <div class="position-relative overflow-hidden h-100" style="min-height: 300px; text-align: center;">
                         <div class="h-100" style="padding-top:10px;">
                             <h5 class="display-6" style="text-align: left;">Dr. Sunil Kumar Rajput</h5>
-                            <h2 style="color: rgb(0, 0, 0);text-align: left;">Deputy Coordinator</h2>
+                            <h2 style="color: rgb(0, 0, 0);text-align: left;">Vice President</h2>
                             <p class="text-hover" style="text-align:justify">
                                Dr. Sunil Kumar Rajput is an Associate Professor in the Department of Mechanical Engineering at Bundelkhand Institute of Engineering & Technology (BIET), Jhansi. He holds a Ph.D. in Metallurgical and Materials Engineering from the prestigious Indian Institute of Technology (IIT) Roorkee.
 Dr. Rajput's academic and research work primarily focuses on hot deformation behavior, mechanical behavior of materials, and materials processing techniques. With over 65 research publications in reputed national and international journals, he has made significant contributions to the field of mechanical and materials engineering. He has successfully guided 28 M.Tech dissertations and 2 Ph.D. scholars, and is currently supervising 1 ongoing Ph.D. candidate.
